<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;



class Categoria extends Model 
{
    use HasFactory;

    protected $table = 'categorias';

    protected $fillable = [
        'nombre',
      
    ];

    public function libros() {
        return $this->belongsToMany(Libro::class, 'libro_categoria', 'categoria_id', 'libro_id');
    }
}

